// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingActionButton renders correct props with secondary buttons 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      [
        {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "elevation": 5,
          "justifyContent": "flex-end",
          "zIndex": 999,
        },
      ],
      {
        "margin": 30,
      },
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "elevation": 5,
        "justifyContent": "flex-end",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 999,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        [
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "elevation": 5,
            "justifyContent": "flex-end",
            "zIndex": 999,
          },
        ],
        {
          "alignItems": "flex-end",
        },
        {
          "paddingVertical": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 27,
            "right": 0,
            "width": 54,
            "zIndex": 999,
          },
          {
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.35,
            "shadowRadius": 3,
          },
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          }
        }
        testID="FloatingAction"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 27,
              "height": 54,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 54,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#e74c3c",
                  "elevation": 5,
                  "rippleColor": "rgba(0, 0, 0, 0.4)",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 3,
                  "size": 54,
                },
                {
                  "alignItems": "center",
                  "borderRadius": 27,
                  "height": 54,
                  "justifyContent": "center",
                  "width": 54,
                },
              ]
            }
            testID="FloatingAction$IconView"
          >
            <View
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "flexShrink": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <View
                testId="icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton renders correct props without secondary buttons 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      [
        {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "elevation": 5,
          "justifyContent": "flex-end",
          "zIndex": 999,
        },
      ],
      {
        "margin": 30,
      },
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "elevation": 5,
        "justifyContent": "flex-end",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 999,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        [
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "elevation": 5,
            "justifyContent": "flex-end",
            "zIndex": 999,
          },
        ],
        {
          "alignItems": "flex-end",
        },
        {
          "paddingVertical": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 27,
            "right": 0,
            "width": 54,
            "zIndex": 999,
          },
          {
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.35,
            "shadowRadius": 3,
          },
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          }
        }
        testID="FloatingAction"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 27,
              "height": 54,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 54,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#e74c3c",
                  "elevation": 5,
                  "rippleColor": "rgba(0, 0, 0, 0.4)",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 3,
                  "size": 54,
                },
                {
                  "alignItems": "center",
                  "borderRadius": 27,
                  "height": 54,
                  "justifyContent": "center",
                  "width": 54,
                },
              ]
            }
            testID="FloatingAction$IconView"
          >
            <View
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "flexShrink": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <View
                testId="icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position bottom correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      [
        {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "elevation": 5,
          "justifyContent": "flex-end",
          "zIndex": 999,
        },
      ],
      {
        "margin": 30,
      },
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "elevation": 5,
        "justifyContent": "flex-end",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 999,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        [
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "elevation": 5,
            "justifyContent": "flex-end",
            "zIndex": 999,
          },
        ],
        {
          "alignItems": "flex-end",
        },
        {
          "paddingVertical": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 27,
            "right": 0,
            "width": 54,
            "zIndex": 999,
          },
          {
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.35,
            "shadowRadius": 3,
          },
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          }
        }
        testID="FloatingAction"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 27,
              "height": 54,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 54,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#e74c3c",
                  "elevation": 5,
                  "rippleColor": "rgba(0, 0, 0, 0.4)",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 3,
                  "size": 54,
                },
                {
                  "alignItems": "center",
                  "borderRadius": 27,
                  "height": 54,
                  "justifyContent": "center",
                  "width": 54,
                },
              ]
            }
            testID="FloatingAction$IconView"
          >
            <View
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "flexShrink": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <View
                testId="icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position top correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      [
        {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "elevation": 5,
          "justifyContent": "flex-start",
          "zIndex": 999,
        },
      ],
      {
        "margin": 30,
      },
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "elevation": 5,
        "justifyContent": "flex-start",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 999,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        [
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "elevation": 5,
            "justifyContent": "flex-start",
            "zIndex": 999,
          },
        ],
        {
          "alignItems": "flex-end",
        },
        {
          "paddingVertical": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 27,
            "right": 0,
            "width": 54,
            "zIndex": 999,
          },
          {
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.35,
            "shadowRadius": 3,
          },
          {
            "backgroundColor": "#e74c3c",
            "elevation": 5,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 54,
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          }
        }
        testID="FloatingAction"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 27,
              "height": 54,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 54,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#e74c3c",
                  "elevation": 5,
                  "rippleColor": "rgba(0, 0, 0, 0.4)",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 3,
                  "size": 54,
                },
                {
                  "alignItems": "center",
                  "borderRadius": 27,
                  "height": 54,
                  "justifyContent": "center",
                  "width": 54,
                },
              ]
            }
            testID="FloatingAction$IconView"
          >
            <View
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "flexShrink": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <View
                testId="icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
